tests/ui/try_transmute_ref-dst-not-immutable-tryfrombytes.nightly.stderr
error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:18:59
    |
 18 |     let dst_not_try_from_bytes: Result<&NotZerocopy, _> = try_transmute_ref!(&AU16(0));
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a Src, &'a Dst>::try_transmute_ref`
   --> src/util/macro_util.rs:742:14
    |
739 |     pub fn try_transmute_ref(self) -> Result<&'a Dst, ValidityError<&'a Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
742 |         Dst: TryFromBytes + Immutable,
    |              ^^^^^^^^^^^^ required by this bound in `Wrap::<&Src, &Dst>::try_transmute_ref`
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
   --> $DIR/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:18:59
    |
 18 |     let dst_not_try_from_bytes: Result<&NotZerocopy, _> = try_transmute_ref!(&AU16(0));
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Immutable` is not implemented for `NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(Immutable)]` to `NotZerocopy`
    = help: the following other types implement trait `Immutable`:
              &T
              &mut T
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
            and 128 others
note: required by a bound in `zerocopy::util::macro_util::Wrap::<&'a Src, &'a Dst>::try_transmute_ref`
   --> src/util/macro_util.rs:742:29
    |
739 |     pub fn try_transmute_ref(self) -> Result<&'a Dst, ValidityError<&'a Src, Dst>>
    |            ----------------- required by a bound in this associated function
...
742 |         Dst: TryFromBytes + Immutable,
    |                             ^^^^^^^^^ required by this bound in `Wrap::<&Src, &Dst>::try_transmute_ref`
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:18:33
    |
 18 |     let dst_not_try_from_bytes: Result<&NotZerocopy, _> = try_transmute_ref!(&AU16(0));
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `ValidityError`
   --> src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:18:59
    |
 18 |     let dst_not_try_from_bytes: Result<&NotZerocopy, _> = try_transmute_ref!(&AU16(0));
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `ValidityError`
   --> src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
